Ajustando validações e limpando o codigo visando mais clareza e limpeza