@@ -6,24 +6,25 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
-    
+                
+
     <build>
         <plugins>
             
-            
+            <!-- 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+                        <arg>enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
+            -->
             
-            
-            <!-- Aqui em baixo(BLOCO PLUGIN) é o que faz o .jar funcionar. REVISAR DEPOIS! -->
+            <!-- Esse bloco é do mavem-assembly-plugin responsavel por criar o jar e colocar todas as dependencias do projeto dentro dele.-->
             <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-assembly-plugin</artifactId>
@@ -49,10 +50,43 @@
     </executions>
 </plugin>
 
-            
-            
-            
-            
+
+            <!-- Esse bloco é do maven-plugin-launch4j e ele é responsavel por converter meu .jar para exe.-->
+
+<plugin>
+            <groupId>com.akathist.maven.plugins.launch4j</groupId>
+            <artifactId>launch4j-maven-plugin</artifactId>
+            <version>2.6.0</version>
+            <executions>
+                <execution>
+                    <id>l4j-clui</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>launch4j</goal>
+                    </goals>
+                    <configuration>
+                        <outfile>target/DiarioDeTrade.exe</outfile>
+                        <jar>target/DiarioDeTrade-1.0-SNAPSHOT-jar-with-dependencies.jar</jar>
+                        <dontWrapJar>false</dontWrapJar>
+                        <headerType>gui</headerType>
+                        <jre>
+                            <path>copiaDaJre</path>
+                            <minVersion>24</minVersion>
+                        </jre>
+                        <!--<icon>src/main/resources/imagens/icon.ico</icon>-->
+                        <errTitle>Erro no Diario de Trade</errTitle>
+                        <classPath>
+                            <mainClass>app.App</mainClass>
+                        </classPath>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        
+        
+        
+        
+        
         </plugins>
     </build>
     
@@ -116,7 +150,12 @@
     <artifactId>jcalendar</artifactId>
     <version>1.4</version>
 </dependency>
-
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>layout</artifactId>
+            <version>9.2.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
     
